# aca_python_vnet

./: .gitignore  README.md  deploy.sh  py-sample.code-workspace
.devcontainer/: devcontainer.json  postCreateCommand.sh
infra/: deploy.sh  main.tf
infra/tf/: deploy.sh  main.tf  main.tfvars  terraform.tfstate  terraform.tfstate.backup
src/: .gitignore  deploy.sh
src/bicep/: main.bicep
src/cronjob/: app.py  docker-compose.debug.yml  docker-compose.yml  requirements.txt
src/cups-proxy/: Dockerfile  entrypoint.sh  nginx.conf  nginx.conf.template
src/ipod/: .dockerignore  Dockerfile  README.md  app.py  configure-cups.sh  cupsd.conf  docker-compose.debug.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
src/ipod-cron/: Dockerfile  app.py  docker-compose.yml
src/ipod-cron-get/: .dockerignore  Dockerfile  app.py  docker-compose.yml  requirements.txt
src/ipod/ipod/: asgi.py  settings.py  urls.py  wsgi.py
src/ipod/myapp/: models.py  views.py
src/ipod/myapp/migrations/: 0001_initial.py  0002_add_initial_data.py  0003_mymodel_created_at.py
src/ipod/myapp/templates/: my_template.html
src/ipod/templates/: my_template.html
src/mysql-job/: Dockerfile  SAMPLE.env  app.py  docker-compose.yml
src/print/: Dockerfile  app.py  docker-compose.yml
src/py-sample/: Dockerfile  app.py  docker-compose.debug.yml  docker-compose.yml
src/sftp/: Dockerfile  app.py  docker-compose.yml
src/sftp-get-job/: Dockerfile  docker-compose.yml
src/sftp-mysql-job/: Dockerfile  app.py  docker-compose.yml  requirements.txt
src/software/: install_cups.sh  (+1 more)
(+51 files in other folders)
